Adding adjustments to Desktop UI view

--- a/index.html
+++ b/index.html
@@ -40,52 +40,59 @@
   </header>
   <div class="container">
     <div class="split">
-      <div class="img-desktop">
-        <img class="img-desktop-header" src="images/image-product-1.jpg" alt="">
-        <ul class="img-gallery ">
-          <li>
-            <img class="product-img-main" src="images/image-product-1.jpg" alt="">
-          </li>
-          <li>
-            <img class="product-img-main" src="images/image-product-1.jpg" alt="">
-          </li>
-          <li>
-            <img class="product-img-main" src="images/image-product-1.jpg" alt="">
-          </li>
-          <li>
-            <img class="product-img-main" src="images/image-product-1.jpg" alt="">
-          </li>
-        </ul>
+      <div class="test-1">
+
+        <div class="img-desktop">
+          <img class="img-desktop-header" src="images/image-product-1.jpg" alt="">
+          <ul class="img-gallery ">
+            <li>
+              <img class="product-img-main" src="images/image-product-1.jpg" alt="">
+            </li>
+            <li>
+              <img class="product-img-main" src="images/image-product-1.jpg" alt="">
+            </li>
+            <li>
+              <img class="product-img-main" src="images/image-product-1.jpg" alt="">
+            </li>
+            <li>
+              <img class="product-img-main" src="images/image-product-1.jpg" alt="">
+            </li>
+          </ul>
+        </div>
+
       </div>
 
+      <div class="test-1">
+        <div class="info-box">
+          <h3>Sneaker Company</h3>
+          <h1>Fall Limited Edition Sneaker</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolore aliquam! Beatae quia quis id vel, est
+            veritatis animi repellat iste expedita voluptatibus architecto adipisci accusamus doloremque officia qui
+            necessitatibus.
+          </p>
 
-      <div class="info-box">
-        <h3>Sneaker Company</h3>
-        <h1>Fall Limited Edition Sneaker</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolore aliquam! Beatae quia quis id vel, est
-          veritatis animi repellat iste expedita voluptatibus architecto adipisci accusamus doloremque officia qui
-          necessitatibus.
-        </p>
+          <div class="pricing-box">
+            <div class="sale-box">
+              <span class='price-text'>$125.00</span>
+              <span class="price-percent">50%</span>
+            </div>
 
-        <div class="pricing-box">
-          <div class="sale-box">
-            <span class='price-text'>$125.00</span>
-            <span class="price-percent">50%</span>
+            <span class="old-price">$250.00</span>
+
           </div>
-          <span class="old-price">$250.00
-          </span>
-        </div>
-        <div class="btn-container-box">
-          <button class="btn btn--counter">
-            <img src="images/icon-minus.svg" alt="">
-            <span>0</span>
-            <img src="images/icon-plus.svg" alt="">
-          </button>
-          <button class="btn btn--main">Add to cart</button>
-        </div>
-      </div>
+          <div class="btn-container-box">
 
+            <button class="btn btn--counter">
+              <img src="images/icon-minus.svg" alt="">
+              <span>0</span>
+              <img src="images/icon-plus.svg" alt="">
+            </button>
+            <button class="btn btn--main">Add to cart</button>
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
 </body>
