adding preview-image modal fuctionality / UI elements

--- a/index.html
+++ b/index.html
@@ -14,6 +14,34 @@
 
 
 <body>
+
+
+  <!-- Modal review  -->
+  <div class="modal hidden">
+    <div class="img-desktop">
+      <img class="close-icon" src="images/icon-close.svg" alt="close-icon">
+      <div class="preview">
+        <span class="arrow arrow-left">
+          <img src="images/icon-previous.svg" alt="previous-arrow">
+
+        </span>
+        <img class="img-desktop-header" src="images/image-product-1.jpg" alt="picture-of-product">
+        <span class="arrow arrow-right">
+          <img src="images/icon-next.svg" alt="next-arrow">
+
+        </span>
+      </div>
+
+      <div class="img-gallery ">
+        <img class="product-img-main" src="images/image-product-1.jpg" alt="">
+        <img class="product-img-main" src="images/image-product-2-thumbnail.jpg" alt="">
+        <img class="product-img-main" src="images/image-product-3-thumbnail.jpg" alt="">
+        <img class="product-img-main" src="images/image-product-4-thumbnail.jpg" alt="">
+      </div>
+    </div>
+  </div>
+
+
   <div class='container'>
 
     <nav>
@@ -38,34 +66,32 @@
     <img class="product-img-main" src="images/image-product-1.jpg" alt="">
 
   </header>
+
+
+
   <div class="container">
     <div class="split">
       <div class="test-1">
 
         <div class="img-desktop">
           <img class="img-desktop-header" src="images/image-product-1.jpg" alt="">
-          <ul class="img-gallery ">
-            <li>
-              <img class="product-img-main" src="images/image-product-1.jpg" alt="">
-            </li>
-            <li>
-              <img class="product-img-main" src="images/image-product-1.jpg" alt="">
-            </li>
-            <li>
-              <img class="product-img-main" src="images/image-product-1.jpg" alt="">
-            </li>
-            <li>
-              <img class="product-img-main" src="images/image-product-1.jpg" alt="">
-            </li>
-          </ul>
+
+          <div class="img-gallery ">
+            <img class="product-img-main" src="images/image-product-1.jpg" alt="">
+            <img class="product-img-main" src="images/image-product-2-thumbnail.jpg" alt="">
+            <img class="product-img-main" src="images/image-product-3-thumbnail.jpg" alt="">
+            <img class="product-img-main" src="images/image-product-4-thumbnail.jpg" alt="">
+          </div>
         </div>
 
       </div>
 
       <div class="test-1">
         <div class="info-box">
-          <h3>Sneaker Company</h3>
-          <h1>Fall Limited Edition Sneaker</h1>
+          <div>
+            <h3>Sneaker Company</h3>
+            <h1>Fall Limited Edition Sneaker</h1>
+          </div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolore aliquam! Beatae quia quis id vel, est
             veritatis animi repellat iste expedita voluptatibus architecto adipisci accusamus doloremque officia qui
@@ -96,5 +122,7 @@
     </div>
   </div>
 </body>
+
+<script src="src/js/app.js"></script>
 
 </html>
